LibFree() crashes blender with LibLoaded objects #40199

Closed
opened 2014-05-14 19:25:59 +02:00 by Raf Colson · 8 comments

System Information
Windows 7 64 bit, Nvidia GeForce GT540M Cuda

Blender Version
Broken: Broken: 2.50 up to current: 2.70a

Short description of error
Blender crashes when freeing libraries created with LibNew() from LibLoaded objects.

Exact steps for others to reproduce the error
Press 'P' to start the game. First 'Library.blend' containing object 'Icosphere' will be LibLoaded. Next a number of copies will be spawned and their meshes will be replaced by new ones with LibNew(). Press 'Spacebar' to free all libraries, starting with the last library added. For testing purposes on every logic tic only one library will be freed. Blender crashes immediately, even in case only one Icosphere had been spawned. (change GameProperty 'number' to 1 to see this).

LibFree_with_LibLoad_crash_bug.zip

**System Information** Windows 7 64 bit, Nvidia GeForce GT540M Cuda **Blender Version** Broken: Broken: 2.50 up to current: 2.70a **Short description of error** Blender crashes when freeing libraries created with LibNew() from LibLoaded objects. **Exact steps for others to reproduce the error** Press 'P' to start the game. First 'Library.blend' containing object 'Icosphere' will be LibLoaded. Next a number of copies will be spawned and their meshes will be replaced by new ones with LibNew(). Press 'Spacebar' to free all libraries, starting with the last library added. For testing purposes on every logic tic only one library will be freed. Blender crashes immediately, even in case only one Icosphere had been spawned. (change GameProperty 'number' to 1 to see this). [LibFree_with_LibLoad_crash_bug.zip](https://archive.blender.org/developer/F88962/LibFree_with_LibLoad_crash_bug.zip)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @raco

Added subscriber: @raco

#35845 was marked as duplicate of this issue

#35845 was marked as duplicate of this issue

Added subscribers: @mahalin, @Moguri

Added subscribers: @mahalin, @Moguri

◀ Merged tasks: #35845.

◀ Merged tasks: #35845.

This issue was referenced by ff2ec05662

This issue was referenced by ff2ec0566208a3594ef46577062a97119cfe9b2c

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit ff2ec05662.

Closed by commit ff2ec05662.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40199
No description provided.