Fix T40199: bge.logic.LibFree() could cause crashes by leaving dangling pointers in the rasterizer.